<resources>
    <string name="app_name">Safe Haven</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_call_buttons">CallButtons</string>
    <string name="message_message">Message Text:</string>
    <string name="message_add_photo">Click To Add Picture</string>
    <string name="message_send">Send</string>

    <string name="ps_emergency">Emergency</string>
    <string name="ps_danger">Danger</string>
    <string name="ps_escort">Escort</string>
    <string name="ps_complaint">Complaint</string>
    <string name="ps_report">Report</string>
    <string name="ps_label">Public Safety</string>

    <string name="lp_label">Local Police</string>
    <string name="lp_police">Lock Haven Police</string>

    <string name="pc_label">Poison Control</string>
    <string name="pc_poisoncontrol">Poison Control</string>

    <string name="wc_label">Local Women\'s Center</string>
    <string name="wc_womencenter">Clinton County Women\'s Center</string>

    <string name="eula_updates">Version 1.0</string>
    <string name="eula_text">The user gives permission to allow Public Safety the ability to track call, message, and location data transpired through the use of SafeHaven. This information may, or may not, be used in co-ordination with future criminal investigations. By Accepting these terms, the user hereby acknowledges the fair use of the information received through SafeHaven. If the user sends messages or calls Public Safety with fake intent, the Public Safety reserves the right to strip the services away from the device at anytime. By accepting the EULA the user agrees to the lawful use of SafeHaven and all other accompanying services.</string>
</resources>
