<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_call_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.lhup.safehaven.safehaven.CallButtons"
    tools:showIn="@layout/activity_call_buttons"

    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            >
            <TextView
                android:id="@+id/ps_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ps_label"
                android:textSize="20sp"
                android:textColor="@color/black"
            />

            <View
                android:id="@+id/ps_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/ps_label"
                android:background="#c0c0c0"
                />

            <Button
                android:id="@+id/ps_emergency"
                android:layout_height="100dip"
                android:layout_below="@id/ps_bar"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/ps_emergency"
                />

            <Button
                android:id="@+id/ps_danger"
                android:layout_height="100dip"
                android:layout_below="@id/ps_emergency"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/ps_danger"
                />

            <Button
                android:id="@+id/ps_escort"
                android:layout_height="100dip"
                android:layout_below="@id/ps_danger"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/ps_escort"
                />

            <Button
                android:id="@+id/ps_complaint"
                android:layout_height="100dip"
                android:layout_below="@id/ps_escort"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/ps_complaint"
                />

            <Button
                android:id="@+id/ps_report"
                android:layout_height="100dip"
                android:layout_below="@id/ps_complaint"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/ps_report"
                />

            <TextView
                android:id="@+id/lp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ps_report"
                android:text="@string/lp_label"
                android:layout_marginTop="20dip"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/lp_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/lp_label"
                android:background="#c0c0c0"
                />

            <Button
                android:id="@+id/lp_police"
                android:layout_height="100dip"
                android:layout_below="@id/lp_bar"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/lp_police"
                />

            <TextView
                android:id="@+id/pc_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lp_police"
                android:text="@string/pc_label"
                android:layout_marginTop="20dip"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/pc_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/pc_label"
                android:background="#c0c0c0"
                />

            <Button
                android:id="@+id/pc_poisoncontrol"
                android:layout_height="100dip"
                android:layout_below="@id/pc_bar"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/pc_poisoncontrol"
                />

            <TextView
                android:id="@+id/wc_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pc_poisoncontrol"
                android:text="@string/wc_label"
                android:layout_marginTop="20dip"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <View
                android:id="@+id/wc_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/wc_label"
                android:background="#c0c0c0"
                />

            <Button
                android:id="@+id/wc_womenscenter"
                android:layout_height="100dip"
                android:layout_below="@id/wc_bar"
                android:layout_centerHorizontal="true"
                android:layout_width="300dip"
                android:layout_marginTop="10dip"
                android:text="@string/wc_womencenter"
                />

        </RelativeLayout>

</LinearLayout>
</ScrollView>
