<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:id="@+id/activity_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="56dp"


    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alphablack"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/message_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_message"
            android:textColor="@color/white"
            />

<EditText
    android:id="@+id/message_text"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_below="@id/message_label"
    android:inputType="textMultiLine" />

        <ImageView
            android:id="@+id/message_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/message_text"

            />

        <TextView
            android:id="@+id/message_image_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/message_image"
            android:layout_alignTop="@+id/message_image"
            android:layout_alignRight="@+id/message_image"
            android:layout_alignBottom="@+id/message_image"

            android:gravity="center"
            android:text="@string/message_add_photo"
            android:textColor="@color/white"
            android:background="@drawable/back"
            />

        <Button
            android:id="@+id/message_send"
            android:text="@string/message_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
             />


    </RelativeLayout>

</RelativeLayout>
